--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,24 @@
 /KFe3J_HM.pck
 /KFe3J_Ud.pck
 /__pycache__
-/main.py
+/.vscode
+pckFiles/CVO_HKmap_En.pck
+pckFiles/CVO_HKmap_Sqw.pck
+pckFiles/CVO_HM.pck
+pckFiles/CVO_Ud.pck
+pckFiles/KFe3J_EQmap_En.pck
+pckFiles/KFe3J_EQmap_Sqw.pck
+pckFiles/KFe3J_HKmap_En.pck
+pckFiles/KFe3J_HKmap_Sqw.pck
+pckFiles/KFe3J_HM.pck
+pckFiles/KFe3J_Ud.pck
+pckFiles/ZnCVO_EKmap_En.pck
+pckFiles/ZnCVO_EKmap_Sqw.pck
+pckFiles/ZnCVO_EQmap_En.pck
+pckFiles/ZnCVO_EQmap_Sqw.pck
+pckFiles/ZnCVO_HM.pck
+pckFiles/ZnCVO_Ud.pck
+KFe3J/.DS_Store
+KFe3J/__pycache__
+
+
