--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,7 @@ pckFiles/ZnCVO_HM.pck
 pckFiles/ZnCVO_Ud.pck
 KFe3J/.DS_Store
 KFe3J/__pycache__
+aCVO/.DS_Store
+aCVO/__pycache__
+ZnCVO/.DS_Store
+ZnCVO/__pycache__
