Show a progress bar

--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,7 @@ aCVO/output2.file
 aCVO/output.file
 output2.file
 magcalc_20240213.py
+output_KFe3J.txt
+output.txt
+KFe3J/output.file
+KFe3J/output2.file
