Change spin-model files

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,18 @@ output_KFe3J.txt
 output.txt
 KFe3J/output.file
 KFe3J/output2.file
+atom_pos.py
+KFe3J.cif
+read_cif.py
+aCVO/spin_model2.py
+aCVO/alpha-Cu2V2O7.cif
+aCVO/test_sm2.py
+aCVO/aCVO_allP/disp_CVO.py
+aCVO/aCVO_allP/EQmap_CVO.py
+aCVO/aCVO_allP/HKmap_CVO.py
+aCVO/aCVO_allP/lmfit_CVO.py
+aCVO/aCVO_allP/spin_model_allP.py
+alpha-Cu2V2O7.cif
+aCVO/spin_model_cif.py
+KFe3J/test_sm2.py
+KFe3J/spin_model2.py
